# tmpTrans

main/cpp/: CMakeLists.txt  napi_init.cpp
main/cpp/baseLog/: baseLog.h
main/cpp/miniaudio/: miniaudio.c  miniaudio.h  miniaudio_libvorbis.h  stb_vorbis.c
main/cpp/miniaudio_t/: miniaudio_custom_vorbis.cpp  miniaudio_custom_vorbis.h  miniaudio_t.cpp  miniaudio_t.h
main/cpp/types/libentry/: Index.d.ts
main/cpp/vorbis_t/: vorbis_t.cpp  vorbis_t.h
main/ets/entryability/: EntryAbility.ets
main/ets/pages/: Index.ets
